# sample-library

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
.changie/: config.yaml
.githooks/: pre-commit  pre-push
docs/: architecture.md
include/PROJECT_SLUG/: sample.h
src/: sample.c
tests/: CMakeLists.txt
tests/src/: test_hello.c
